--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "0.20.0",
     "expo": "~38.0.8",
     "expo-font": "8.2.2",
     "expo-status-bar": "^1.0.2",
