--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "0.20.0",
-    "expo": "^38.0.10",
+    "expo": "~38.0.8",
     "expo-font": "8.2.2",
     "expo-status-bar": "^1.0.2",
     "native-base": "2.13.14",
