--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "0.20.0",
-    "expo": "^38.0.10",
+    "expo": "38.0.10",
     "expo-font": "8.2.2",
     "expo-network": "2.2.1",
     "expo-status-bar": "^1.0.2",
@@ -18,6 +18,10 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-router-flux": "4.2.0",
+    "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "9.4.0",
     "react-redux": "7.2.1",
